[metadata]
name = pygls
author = Open Law Library
author_email = info@openlawlib.org
license = Apache 2.0
description = a pythonic generic language server (pronounced like "pie glass").
keywords = python, pythonic, generic, language, server, protocol
url = https://github.com/openlawlibrary/pygls/tree/master/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
setup_requires =
    setuptools>=45
    wheel
    setuptools_scm[toml]>=6.2
packages = find:
zip_safe = False
install_requires =
    pydantic~=1.9
    typeguard~=2.13
include_package_data = True
tests_require =
    mock==4.0.3
    pytest==7.0.1
    pytest-asyncio==0.18.3

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
ws =
    websockets~=10.2
dev =
    bandit==1.7.4
    flake8==4.0.1
    mypy==0.942
docs =
    sphinx~=4.5.0
    sphinx_rtd_theme~=1.0
test =
    mock==4.0.3
    pytest==7.0.1
    pytest-asyncio==0.18.3

[options.data_files] =
lib/site-packages/pygls =
    ThirdPartyNotices.txt
    ./pygls/py.typed

[flake8]
max-line-length = 99

[mypy]
ignore_missing_imports = True

[tool:pytest]
asyncio_mode = auto