[metadata]
name = pygls
version = attr: pygls.__version__
author = Open Law Library
author_email = info@openlawlib.org
license = Apache 2.0
description = a pythonic generic language server (pronounced like "pie glass").
keywords = python, pythonic, generic, language, server, protocol
url = https://github.com/openlawlibrary/pygls/tree/master/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
setup_requires =
    setuptools>=44
    wheel
    setuptools_scm>=3.4.3
    toml
python_requires = >=3.7,<3.12
packages = find:
zip_safe = False
install_requires =
    pydantic>=1.9.1,<1.10  ; python_version<"3.11"
    pydantic>=1.10.2 ; python_version>="3.11"
    typeguard>=2.10.0,<3
include_package_data = True
tests_require =
    mock==4.0.3
    pytest==7.1.2
    pytest-asyncio==0.18.3

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
ws =
    websockets==10.*
dev =
    bandit==1.7.4
    flake8==4.0.1
    mypy==0.961
docs =
    sphinx==5.0.1
    sphinx_rtd_theme==1.0.0
test =
    mock==4.0.3
    pytest==7.1.2
    pytest-asyncio==0.18.3

[options.data_files] =
lib/site-packages/pygls =
    ThirdPartyNotices.txt
    ./pygls/py.typed

[flake8]
max-line-length = 99

[mypy]
ignore_missing_imports = True
plugins = pydantic.mypy

[pydantic-mypy]
init_forbid_extra = True
